--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: splash
+classes:
+  - landing
+  - wide
 author_profile: false
 ---
